[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rank_hpo"
version = "0.1.0"
description = "A small python package for rank-based hyperparameter optimization"
readme = "README.rst"
authors = [
  {name = "David Li-Bland", email = "david.libland@gmail.com"}
]
maintainers = [
  {name = "David Li-Bland", email = "david.libland@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [

    "numpy",
    "pandas",
    "jupyter",
    "jupytext",
    "matplotlib",
    "torch",
    "lightning",
    "tensorboard",
    "einops",
    "scikit-optimize",
    "tqdm"
]

[project.optional-dependencies]
dev = [
    "isort",  # code formatting
    "black",  # code formatting
    "ruff",  # code formatting
    "mypy",  # static type checking
    "pytest",  # testing
    "coverage",  # testing
    "hypothesis", # property-based testing
]

[project.urls]

bugs = "https://github.com/davidlibland/rank_hpo/issues"
changelog = "https://github.com/davidlibland/rank_hpo/blob/master/changelog.md"
homepage = "https://github.com/davidlibland/rank_hpo"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

